增加工具包

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+
         <!-- spring support -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -130,6 +138,12 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.9.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.0.0.Alpha2</version>
+            <classifier>sources</classifier>
         </dependency>
         <!-- test support end-->
         <!-- 日志文件管理包 -->
