--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,7 +1,7 @@
 #mysql
 mysql.driverClassName=com.mysql.jdbc.Driver
 mysql.url=jdbc:mysql://115.159.26.92:3306/mydata
-mysql.username=zhu
+mysql.username=zhugaozi
 mysql.password=root
 
 ##mysql
